# IFC-Inspector

./: .gitignore  Cargo.toml  LICENSE  README.md
docs/: api.md  architecture.md  index.md  usage.md
src/: error.rs  lib.rs  main.rs
src/export/: csv.rs  json.rs  mod.rs
src/model/: element.rs  element_type.rs  mod.rs  project.rs
src/parser/: ifc.rs  mod.rs  step.rs
src/ui/: app.rs  dashboard.rs
