[package]
name = "ifc-inspector"
version = "1.0.0"
edition = "2021"
description = "Terminal-based IFC Inspector - browse families and types from IFC files"
authors = ["Mateusz Bochyński"]
license = "MIT"
repository = "https://github.com/Bochyn/ifc-inspector"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
color-eyre = "0.6"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
thiserror = "2.0"

[dev-dependencies]
pretty_assertions = "1.4"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Allowed with justification
module_name_repetitions = "allow"  # ElementType in element_type module is clear
too_many_lines = "allow"           # Parser functions have justified length
missing_errors_doc = "allow"       # Errors are self-documenting with thiserror
missing_panics_doc = "allow"       # No panics in public API
cast_precision_loss = "allow"      # usize to f64 precision loss acceptable for counts
cast_possible_truncation = "allow" # UI dimension calculations are bounded
manual_let_else = "allow"          # match is often clearer for Option handling
doc_markdown = "allow"             # Not all identifiers need backticks
